# optiload

./: .env.example  .gitignore  DEPLOYMENT_CONFIG_SUMMARY.md  GUIDELINES.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  railway.toml  setup-db.ps1  setup-db.sh  verify-config.py
backend/: .dockerignore  .env.example  .env.local  .env.production  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  apply_migration.py  check_vehicles.py  debug_placement.py  fix_all_vehicles.py  pyproject.toml  requirements.txt  rule_registry_optimized.json  seed_data.json
backend/app/: config.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/admin/: router.py
backend/app/auth/: router.py
backend/app/core/: cache.py  config.py  database.py  health.py  lockout.py  logging_config.py  middleware.py  security.py  seed.py
backend/app/loads/: router.py
backend/app/optimizations/: router.py
backend/app/routers/: __init__.py  api_keys.py  auth.py  dashboard.py  loads.py  optimizations.py  users.py  vehicles.py  warehouses.py
backend/app/users/: router.py
backend/docs/: backend_design.md  load_schema_contract.md
backend/migrations/: README  env.py
backend/tests/: conftest.py  test_aar_rules_complete.py  test_cg.py  test_determinism.py  test_edge_cases.py  test_helpers.py  test_jwt_security.py  test_optimization.py  test_optimization_complete.py  test_optimization_legacy.py  test_password_policy.py  test_rate_limit_backends.py  test_refresh_reuse.py
(+295 files in other folders)
