[project]
name = "optiload-backend"
version = "0.1.0"
description = "OptiLoad FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "bcrypt>=4.1.0",
  "alembic>=1.13.0",
  "PyJWT>=2.8.0",
  "email-validator>=2.1.1",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "fakeredis[lua]>=2.23.0",
]
